--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,17 @@
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
 </head>
 <body>
+
   <% if logged_in? %>
       <%= link_to "Logout", logout_path %>
   <% else %>
       <%= link_to "Login", new_session_path %>
   <% end %>
-<%= yield %>
+  <%= link_to "Posts", posts_path %>
+
+  <div class="container">
+    <%= yield %>
+  </div>
 
 </body>
 </html>
