--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Our food</h1>
 
 <% @posts.each do |post| %>
-  <h1><%= post.food %></h1>
+  <h2>
+    <%= link_to post.food, post_path(post) %>
+  </h2>
   <p><%= post.description %></p>
 <% end %>
