--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -17,6 +17,14 @@
         <%= f.text_field :author %>
     </div>
 
+    <div>
+        <%= f.label :picture %>
+        <%= f.file_field :picture %>
+    </div>
+
+    <div style="width: 175px; height: 100px;">
+      <%= image_tag @post.picture.url %>
+    </div>
 
     <%= f.submit "Submit these changes!" %>
 
