--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,9 +3,9 @@
 <p><%= @post.note %></p>
 
 <div style="width: 175px; height: 100px;">
-  <%= @post.picture %>
-</div>
+  <%= image_tag @post.picture.url %>
 
 <%= link_to "Edit this list!", edit_post_path(@post) %>
 <%= link_to "Delete this post!", post_path, method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
 <%= link_to "Bank to the list!", posts_path %>
+</div>
