--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,32 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="header">
+
+<%= form_tag user_path,{:class => 'form-horizontal'} do %>
+    <div class="row"><legend class="col-md-4 col-md-offset-4">Edit User</legend></div>
+    <fieldset>
+      <div class="form-group">
+          <%= label_tag :name, 'Name', class: 'col-md-4 control-label' %>
+          <div class="col-md-5">
+              <%= text_field_tag :name, params[:name], class: 'form-control' %>
+          </div>
+      </div>
+      <div class="form-group">
+          <%= label_tag :email, 'Email', class: 'col-md-4 control-label' %>
+          <div class="col-md-5">
+              <%= text_field_tag :email, params[:email], class: 'form-control' %>
+          </div>
+      </div>
+        <div class="form-group">
+            <%= label_tag :password, 'Password', class: 'col-md-4 control-label' %>
+            <div class="col-md-5">
+                <%= password_field_tag :password, nil, class: 'form-control' %>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-8 col-md-offset-4">
+                <%= submit_tag "submit changes", class: 'btn btn-success' %>
+                <%= link_to "cancel", user_path, class: 'btn btn-primary' %>
+            </div>
+        </div>
+    </fieldset>
+<% end %>
+</div>
