--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Welcome! New User</h1>
+<!-- <p>Find me in app/views/users/new.html.erb</p> -->
 <%= form_for @user, :html => {class: 'new_user form-horizontal'} do |f| %>
     <div class="row"><legend class="col-md-4 col-md-offset-4">Create Account:</legend></div>
     <fieldset>
@@ -33,6 +33,5 @@
             </div>
         </div>
     </fieldset>
-    <a href="show.html.erb">Back to Profile Page</a>
 
 <% end %>
