--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,5 +7,5 @@
 
 <%= link_to "Edit this list!", edit_post_path(@post) %>
 <%= link_to "Delete this post!", post_path, method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
-<%= link_to "Bank to the list!", posts_path %>
+<%= link_to "Back to the list!", posts_path %>
 </div>
