--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,7 +23,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-8 col-md-offset-4">
-                <%= submit_tag "submit changes", class: 'btn btn-success' %>
+                <%= f.submit "submit changes", class: 'btn btn-success' %>
                 <%= link_to "cancel", user_path, class: 'btn btn-primary' %>
             </div>
         </div>
