--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <p>Find me in app/views/users/show.html.erb</p> -->
 
 <h1>Profile page</h1>
-<h2> Hello!<%= current_user.name %></h2>
+<h2> Hello! <%= current_user.name %></h2>
 
 <h4><%= @user.email %></h4>
 
@@ -10,6 +10,6 @@
   <%= link_to 'Edit User', edit_user_path(current_user.id), class: "btn btn-primary" %>
 </div>
 <div class="btn-group">
-  <%= link_to 'Delete User', edit_user_path(current_user.id), method: :delete, data: { confirm: 'Are you sure?'}, class: "btn btn-danger" %>
+  <%= link_to 'Delete User', user_path, method: :delete, data: { confirm: 'Are you sure you want to delete this user?'}, class: "btn btn-danger" %>
 </div>
 </div>
