switched to svg icon

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Add a new post!</h1>
 
-<%= form_for (@post, multipart: true) do |f| %>
+<%= form_for(@post) do |f| %>
 
     <div>
         <%= f.label :food %>
