--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="header">
 
-<%= form_tag user_path,{:class => 'form-horizontal'} do %>
+<%= form_for form_tag user_path,{:class => 'form-horizontal'} do |f|%>
     <div class="row"><legend class="col-md-4 col-md-offset-4">Edit User</legend></div>
     <fieldset>
       <div class="form-group">
