--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-  <link rel="shortcut icon" type="image/svg+xml" href="../../public/ff.svg" />
+  <link rel="shortcut icon" type="image/svg+xml" href="app/view/laypublic/ff.svg" />
 </head>
 <body>
 
